--- a/.env_example
+++ b/.env_example
@@ -1,12 +1,27 @@
 # Postgresql
-NAME =
-USER =
-PASSWORD =
-PORT =
-HOST =
+POSTGRES_NAME = habits
+POSTGRES_USER =
+POSTGRES_PASSWORD =
+POSTGRES_PORT = 5432
+POSTGRES_HOST = db
 
 # Telegram_bot
+USERNAME =
 TG_BOT_API_KEY =
 
 # tg_chat_id for test
 TG_CHAT_ID =
+
+# Prod settings
+DEBUG = False
+ENV_TYPE = prod
+CELERY_BROKER_URL = 'redis://redis:6379'
+CELERY_RESULT_BACKEND = 'redis://redis:6379'
+CORS_ALLOWED_ORIGINS = '*'
+
+#Dev settings
+#DEBUG = True
+#ENV_TYPE = local
+#CELERY_BROKER_URL = 'redis://localhost:6379'
+#CELERY_RESULT_BACKEND = 'redis://localhost:6379'
+#CORS_ALLOWED_ORIGINS = '*'
