fixed переменную ALLOWED-HOSTS

--- a/.env_example
+++ b/.env_example
@@ -14,14 +14,16 @@ TG_CHAT_ID =
 
 # Prod settings
 DEBUG = False
+ALLOWED_HOSTS =
 ENV_TYPE = prod
-CELERY_BROKER_URL = 'redis://redis:6379'
-CELERY_RESULT_BACKEND = 'redis://redis:6379'
-CORS_ALLOWED_ORIGINS = '*'
+CELERY_BROKER_URL = redis://redis:6379
+CELERY_RESULT_BACKEND = redis://redis:6379
+CORS_ALLOWED_ORIGINS = https://example.com
 
 #Dev settings
 #DEBUG = True
+#ALLOWED_HOSTS =
 #ENV_TYPE = local
-#CELERY_BROKER_URL = 'redis://localhost:6379'
-#CELERY_RESULT_BACKEND = 'redis://localhost:6379'
-#CORS_ALLOWED_ORIGINS = '*'
+#CELERY_BROKER_URL = redis://localhost:6379
+#CELERY_RESULT_BACKEND = redis://localhost:6379
+#CORS_ALLOWED_ORIGINS = *
