--- a/.env_example
+++ b/.env_example
@@ -3,7 +3,10 @@ POSTGRES_NAME = habits
 POSTGRES_USER =
 POSTGRES_PASSWORD =
 POSTGRES_PORT = 5432
+# for docker
 POSTGRES_HOST = db
+# for else
+#POSTGRES_HOST = localhost
 
 # Telegram_bot
 USERNAME =
