--- a/.env_example
+++ b/.env_example
@@ -3,9 +3,6 @@ POSTGRES_NAME = habits
 POSTGRES_USER =
 POSTGRES_PASSWORD =
 POSTGRES_PORT = 5432
-# for docker
-POSTGRES_HOST = db
-# for else
 #POSTGRES_HOST = localhost
 
 # Telegram_bot
@@ -15,18 +12,22 @@ TG_BOT_API_KEY =
 # tg_chat_id for test
 TG_CHAT_ID =
 
-# Prod settings
-DEBUG = False
-ALLOWED_HOSTS =
-ENV_TYPE = prod
+# For docker settings
+POSTGRES_HOST = db
 CELERY_BROKER_URL = redis://redis:6379
 CELERY_RESULT_BACKEND = redis://redis:6379
-CORS_ALLOWED_ORIGINS = https://example.com
 
-#Dev settings
-#DEBUG = True
+# Dev settings
+DEBUG = True
+ALLOWED_HOSTS =
+ENV_TYPE = local
+CORS_ALLOWED_ORIGINS = https://example.com
+#CELERY_BROKER_URL = redis://127.0.0.1:6379
+#CELERY_RESULT_BACKEND = redis://127.0.0.1:6379
+
+# Prod settings
+#DEBUG = False
 #ALLOWED_HOSTS =
-#ENV_TYPE = local
-#CELERY_BROKER_URL = redis://localhost:6379
-#CELERY_RESULT_BACKEND = redis://localhost:6379
-#CORS_ALLOWED_ORIGINS = *
+#ENV_TYPE = prod
+#CELERY_BROKER_URL = redis://127.0.0.1:6379
+#CELERY_RESULT_BACKEND = redis://127.0.0.1:6379
