Изменены настройки запуска приложения

--- a/.env_example
+++ b/.env_example
@@ -1,9 +1,19 @@
 # Postgresql
-POSTGRES_NAME = habits
+POSTGRES_DB = habits
 POSTGRES_USER =
 POSTGRES_PASSWORD =
 POSTGRES_PORT = 5432
-#POSTGRES_HOST = localhost
+POSTGRES_HOST = db
+
+# docker
+CELERY_BROKER_URL = redis://redis:6379
+CELERY_RESULT_BACKEND = redis://redis:6379
+
+# поменять при продакшене
+DEBUG = True
+ALLOWED_HOSTS = *
+ENV_TYPE = local
+CORS_ALLOWED_ORIGINS = https://example.com
 
 # Telegram_bot
 USERNAME =
@@ -11,23 +21,3 @@ TG_BOT_API_KEY =
 
 # tg_chat_id for test
 TG_CHAT_ID =
-
-# For docker settings
-POSTGRES_HOST = db
-CELERY_BROKER_URL = redis://redis:6379
-CELERY_RESULT_BACKEND = redis://redis:6379
-
-# Dev settings
-DEBUG = True
-ALLOWED_HOSTS =
-ENV_TYPE = local
-CORS_ALLOWED_ORIGINS = https://example.com
-#CELERY_BROKER_URL = redis://127.0.0.1:6379
-#CELERY_RESULT_BACKEND = redis://127.0.0.1:6379
-
-# Prod settings
-#DEBUG = False
-#ALLOWED_HOSTS =
-#ENV_TYPE = prod
-#CELERY_BROKER_URL = redis://127.0.0.1:6379
-#CELERY_RESULT_BACKEND = redis://127.0.0.1:6379
